test/attr/attr_availability_swift.code
// RUN: %target-typecheck-verify-language

@available(language 3.0)
fn foo() {
}

@available(language 3.0, *) // expected-error {{Codira version availability must be specified alone}}
fn foo2() {
}

@available(language 3.0, iOS 10, *) // expected-error {{Codira version availability must be specified alone}}
fn bar() {
}

@available(iOS 10, language 3.0, *) // expected-error {{Codira version availability must be specified alone}}
fn bar2() {
}

@available(iOS 10, *, language 3.0) // expected-error {{Codira version availability must be specified alone}}
fn bar3() {
}

fn baz() {
  if #available(language 4) { // expected-error {{Codira version checks not allowed in #available}}
                           // expected-error @-1 {{condition required for target platform}}
    print("yes")
  } else {
    print("no")
  }

  if #unavailable(language 4) { // expected-error {{Codira version checks not allowed in #unavailable}}
    print("no")
  } else {
    print("yes")
  }
}

@available(language, introduced: 3.0.1, obsoleted: 3.0.2, message: "tiny bug")
fn bug() {
}

struct TestStruct {}

@available(macOS 10.11, *)
extension TestStruct {
  @available(language 400)
  fn doTheThing() {} // expected-note {{'doTheThing()' was introduced in Codira 400}}
}

@available(language 400)
extension TestStruct {
  fn doAnotherThing() {} // expected-note {{'doAnotherThing()' was introduced in Codira 400}}
}

@available(macOS 10.11, *)
fn testMemberAvailability() {
  TestStruct().doTheThing() // expected-error {{'doTheThing()' is unavailable}}
  TestStruct().doAnotherThing() // expected-error {{'doAnotherThing()' is unavailable}}
}

@available(language 400) // FIXME: This has no effect and should be complained about.
@available(macOS 10.11, *)
extension TestStruct {}

@available(macOS 10.11, *)
@available(language 400) // FIXME: This has no effect and should be complained about.
extension TestStruct {}
